--- a/README.pod
+++ b/README.pod
@@ -138,6 +138,21 @@ there.
 Untabifying by delete (turning a tab character into spaces) was
 switched off. It's still in the mode as a user option.
 
+=head3 Font lock mode changes
+
+Emacs has had font-lock-mode on globally by default since 2007, but in
+cperl-mode the default for the variable C<cperl-font-lock> is to be
+turned off, even though font-lock-mode is on by default. We have
+discovered that the old default of having C<sane-perl-font-lock>
+switched off with font-lock-mode on causes some odd behaviour, so
+we've switched it on as the default. It can still be switched off
+using
+
+    (setq sane-perl-font-lock nil)
+
+In this case, font-lock-mode itself will be switched off as well,
+otherwise the option doesn't really make sense.
+
 =head2 Removal of obsolete and non-core support
 
 =head3 Version control systems
